--- a/reg2.html
+++ b/reg2.html
@@ -10,7 +10,7 @@
 <center>
 <h2>Thank you for registering for the exam!</h2>
 <b>You will receive an email shortly confirming the same!</b><br><br>
-<a href="index.html">Click here</a> to go back to home page!
+<a href="reg1.html">Click here</a> to go back to home page!
 </font>
 </center>
 </body>
