--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@ input[type="submit"] {
 </center>
 </font>
 <font color="cyan">
-<form name="form1" id="form1" method="post" action="reg2.html" target="_blank" autocomplete="on" validate>
+<form name="form1" id="form1" action="reg2.html" target="_blank" autocomplete="on" validate>
 <fieldset>
 <legend>Personal Information:</legend>
 <br><br>
@@ -82,7 +82,7 @@ input[type="submit"] {
       <input type="text" id="nationality" name="nationality" placeholder="Your Nationality" required><br><br>
       <input type="checkbox" id="agreement" name="agreement" required>
       <label for="agreement">I agree to the terms and conditions.</label><br><br>
-      <input type="Submit" value="Submit">
+      <input type="button" value="Submit" onclick="reg2.html">
 </fieldset>
 </form>
 
