--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@ input[type="submit"] {
       <input type="text" id="nationality" name="nationality" placeholder="Your Nationality" required><br><br>
       <input type="checkbox" id="agreement" name="agreement" required>
       <label for="agreement">I agree to the terms and conditions.</label><br><br>
-      <input type="button" value="Submit" onclick="reg2.html">
+      <input type="Submit" value="Submit">
 </fieldset>
 </form>
 
